[package]
name = "nearest-neighbors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = true
opt-level = 0

[dependencies]
rand = { version = "0.8", features = ["alloc"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search"
harness = false
