[package]
name = "nearest-neighbors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = false
lto = "fat"
opt-level = 3
codegen-units = 1

[dependencies]
argh = "0.1.13"
rand = { version = "0.8", features = ["alloc"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search"
harness = false
